# konj

./: Cargo.toml  LICENSE  README.md  build.rs
bench/: Cargo.toml  bench.rs
src/: constants.rs  convert.rs  double_consonants.rs  hiragana_to_katakana.rs  lexer.rs  lib.rs  main.rs  maps.rs  romaji_to_kana.rs  strings.rs
