[package]
name = "konj"
version = "0.1.0"
authors = ["Akshay Gupta <kitallis@gmail.com>"]
license = "MIT"
description = "A tool to convert between various Japanese scripts"
homepage = "https://github.com/kitallis/konj"
repository = "https://github.com/kitallis/konj"
keywords = ["japanese", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

[dependencies]
indexmap = "1.1.0"
lazy_static = "1.4.0"
ansi_term = "0.12"
phf = { version = "0.8", features = ["macros"] }

[build-dependencies]
phf_codegen = "0.8"

# [lib]
# name = "konj"
# path = "src/lib.rs"

# [[bin]]
# name = "konj"
# path = "src/bin.rs"
